<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.SignUpActivity">

    <LinearLayout
        android:id="@+id/signUpElements"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageReadingSensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/logo"/>

        <com.wolkabout.hexiwear.view.Input_
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/registration_email_hint"
            app:textColor="@color/white"
            app:type="email"/>

        <com.wolkabout.hexiwear.view.Input_
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/registration_password_hint"
            app:textColor="@color/white"
            app:type="password"/>

        <com.wolkabout.hexiwear.view.Input_
            android:id="@+id/firstNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/registration_first_name"
            app:textColor="@color/white"
            app:type="name"/>

        <com.wolkabout.hexiwear.view.Input_
            android:id="@+id/lastNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/registration_last_name"
            app:textColor="@color/white"
            app:type="name"/>

        <CheckBox
            android:id="@+id/termsAndConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_terms_and_conditions"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/min_margin"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:text="@string/login_registration"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signingInElements"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageReadingTrend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/signingInLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:elevation="25dp"
                android:text="@string/login_signing_in"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>