<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.wolkabout.hexiwear.activity.PasswordChangeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password_header"
                android:textColor="@color/primary_dark" />

            <com.wolkabout.hexiwear.view.Input_
                android:id="@+id/currentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hint="@string/change_password_current_password"
                app:type="password" />

            <com.wolkabout.hexiwear.view.Input_
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/change_password_new_password"
                app:type="password" />

            <Button
                android:id="@+id/changePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:background="@color/primary"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/discovery_change_password"
                android:textColor="@color/white" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>
