<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/signInElements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/signInForm"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageReadingSensor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="24dp"
                        android:layout_marginTop="24dp"
                        android:src="@drawable/logo"/>

                    <com.wolkabout.hexiwear.view.Input_
                        android:id="@+id/emailField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        app:errorTextAppearance="@style/DarkerErrorAppearance"
                        app:hint="@string/login_email_hint"
                        app:textColor="@color/white"
                        app:type="email"/>

                    <com.wolkabout.hexiwear.view.Input_
                        android:id="@+id/passwordField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        app:actionLabel="@string/login_sign_in"
                        app:errorTextAppearance="@style/DarkerErrorAppearance"
                        app:hint="@string/login_password_hint"
                        app:textColor="@color/white"
                        app:type="password"/>

                    <Button
                        android:id="@+id/signInButton"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/min_margin"
                        android:gravity="center"
                        android:text="@string/login_sign_in"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/signUpForm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/resetPassword"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/min_margin"
                        android:gravity="center"
                        android:text="@string/login_forgot_password"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/createAccountText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/login_register_hint"
                        android:textColor="@color/grayish"/>

                    <Button
                        android:id="@+id/signUp"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/min_margin"
                        android:gravity="center"
                        android:text="@string/login_registration"
                        android:textColor="@color/white"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signingInElements"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imageReadingTrend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/logo"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/signingInLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:elevation="25dp"
                        android:text="@string/login_signing_in"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
